[package]
name = "rt-doubao"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
native-tls = { version = "0.2" }
embedded-websocket = { git = "https://github.com/ninjasource/embedded-websocket", branch = "master", default-features = false }
url = { version = "2" }
httparse = "1.8"
heapless = "0.7"
sha1 = "0.10"
base64 = "0.13"
# 功放功能
rodio = "0.17"
# 麦克风功能
cpal = "0.15"